<resources>
    <string name="app_name">s175107 Hangman</string>
    <string name="welcoming">Welcome to Hangman</string>
    <string name="play">Play</string>
    <string name="highscore">Highscore</string>
    <string name="help">Help!</string>
    <string name="helpscreen">How to play the game!</string>
    <string name="english">English</string>
    <string name="settings">Settings</string>
    <string name="mainmenu">Main Menu</string>
    <string name="lostpopup">You have lost!</string>
    <string name="playagain">Play again!</string>
    <string name="cancel">Return to Main Menu</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="sound">Soundeffects</string>
    <string name="music">Music</string>
    <string name="musicpref">Turn music on or off.</string>
    <string name="soundpref">Turn soundeffects on or off.</string>
    <string name="exittxt">Do you want to exit the game?</string>
    <string name="exit">Get me out of here!</string>
    <string name="dontexit">No!</string>
    <string name="Highscorelist">Highscore List</string>
    <string name="name">Name:</string>
    <string name="score">Score:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Hangman Game</string>
    <string name="nav_header_subtitle">Emilvinkel@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="helpinfo">The game is about guessing the secret word. When you have made seven wrong guesses you will be hanged, thereby losing the game. You can only select one letter at a time.</string>

</resources>
