<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/creepster"
        android:title="@string/settings">
        <CheckBoxPreference
            android:autoSizeTextType="uniform"
            android:defaultValue="true"
            android:key="pref_music"
            android:icon="@drawable/ic_music"
            android:summary="@string/musicpref"
            android:title="@string/music" />
        <CheckBoxPreference
            android:autoSizeTextType="uniform"
            android:defaultValue="true"
            android:key="pref_sound"
            android:icon="@drawable/ic_sound"
            android:summary="@string/soundpref"
            android:title="@string/sound" />
        <Preference
            android:key="deletedr"
            android:summary="Delete cached words from DR."
            android:title="Delete Cache"
            android:icon="@drawable/ic_delete"/>
        <Preference
            android:key="deletehs"
            android:summary="Delete Highscore"
            android:icon="@drawable/ic_delete"
            android:title="Delete the current Highscore" />
    </PreferenceCategory>


</PreferenceScreen>