<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_dark"
    tools:context=".Hovedmenu_akt"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/creepster"
        android:text="@string/welcoming"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/gifImageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:background="@drawable/rippfect"
        android:fontFamily="@font/creepster"
        android:text="@string/play"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/highscorebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView2"
        tools:elevation="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/highscorebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rippfect"
        android:fontFamily="@font/creepster"
        android:text="@string/highscore"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/helpbutton"
        app:layout_constraintStart_toStartOf="@+id/playbutton"
        app:layout_constraintTop_toBottomOf="@+id/playbutton" />

    <Button
        android:id="@+id/helpbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@drawable/rippfect"
        android:fontFamily="@font/creepster"
        android:text="@string/help"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/gifImageView"
        app:layout_constraintStart_toStartOf="@+id/highscorebutton"
        app:layout_constraintTop_toBottomOf="@+id/highscorebutton" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView2"
        android:layout_width="96dp"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/finalnoose"
        app:layout_constraintBottom_toTopOf="@+id/playbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="96dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/finalnoose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpbutton" />

</android.support.constraint.ConstraintLayout>
